k8s/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: platform-ingress-class
spec:
  controller: k8s.io/platform-ingress-nginx
